[gd_scene format=3 uid="uid://8lo1urojv44m"]

[ext_resource type="Script" uid="uid://dy5fepfat1enr" path="res://Scenes/UI/beam_heat_cursor.gd" id="1_heat"]

[node name="BeamHeatCursor" type="CanvasLayer" unique_id=954235075]
layer = 200
script = ExtResource("1_heat")

[node name="Root" type="Control" parent="." unique_id=545133388]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="Ring" type="Node2D" parent="Root" unique_id=855262690]
z_index = 200

[node name="RingBg" type="Line2D" parent="Root/Ring" unique_id=1995336075]
width = 3.0
default_color = Color(0.1, 0.12, 0.18, 0.7)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="RingFill" type="Line2D" parent="Root/Ring" unique_id=2065109874]
width = 3.0
default_color = Color(0.55, 0.75, 1, 0.9)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="StatusLabel" type="Label" parent="Root" unique_id=2006425490]
layout_mode = 0
theme_override_colors/font_color = Color(0.85, 0.92, 1, 0.9)
theme_override_font_sizes/font_size = 11
horizontal_alignment = 1
vertical_alignment = 1
